fix:header : adding z-index to the header component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,7 @@ header {
   left: 0;
 
   padding: 1rem;
+  z-index: 10;
 }
 
 .logo {
